hphp/hack/test/typecheck/property_declaration_with_attribute_missing_visibility_modifier.php
<?hh
class C {
  <<__Override>>
  int $x;
}
